# git-cdc

./: .gitattributes  .gitconfig.cdc  .gitignore  .goreleaser.yaml  Containerfile  PONYTAIL-DEBT.md  README.md  compose.yml
.github/workflows/: book.yml  ci.yml  codeql.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: filter.rs  git.rs  main.rs  remote.rs  sync.rs
crates/cli/tests/: e2e_filter.rs  e2e_full.rs  e2e_serverless.rs  e2e_ssh.rs  filter.rs  full.rs  serverless.rs  ssh.rs  utils.rs
crates/core/: Cargo.toml
crates/core/benches/: core.rs
crates/core/src/: chunker.rs  client.rs  lib.rs  manifest.rs  pktline.rs  protocol.rs  store.rs
crates/core/src/store/: disk.rs  envelope.rs  mod.rs  opendal.rs  s3.rs
crates/core/tests/: e2e_filter.rs  e2e_full.rs  e2e_serverless.rs  e2e_ssh.rs
crates/core/tests/s3_fixture/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: backend.rs  lib.rs  main.rs
crates/server/tests/: integration.rs  opendal_backend.rs  s3_backend.rs
crates/server/tests/s3_fixture/: mod.rs
crates/server/tests/support/: mod.rs
docs/benchmarks/: LOOP.md  PLAN.md  QA.md  RESULTS.md  REVIEW.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  commands.md  configuration.md  development.md  gc.md  getting-started.md  how-it-works.md  introduction.md  server.md  serverless.md  spec.md  ssh.md
docs/branching-behavior/: RESEARCH.md
docs/compression-and-ssh/: LOOP.md  PLAN.md  QA.md  RESEARCH.md  REVIEW.md
docs/configurable-chunking/: LOOP.md  PLAN-REVIEW.md  PLAN.md  QA.md  RESEARCH.md  REVIEW.md
docs/filter-process/: LOOP.md  PLAN.md  QA.md  RESEARCH.md  REVIEW.md
docs/git-cdc-mvp/: DESIGN.md  LOOP.md  PLAN-REVIEW.md  PLAN.md  QA.md  REVIEW.md
docs/mdbook-docs/: LOOP.md  PLAN.md  QA.md  REVIEW.md
docs/remove-code-duplication/: LOOP.md  PLAN-REVIEW.md  PLAN.md  QA.md  REVIEW.md
docs/s3-storage/: LOOP.md  PLAN-REVIEW.md  PLAN.md  QA.md  REVIEW.md
docs/spec/: chunk-storage.md  manifest.md
docs/storage-backends/: LOOP.md  PLAN-REVIEW.md  PLAN.md  QA.md  RESEARCH.md  REVIEW.md
docs/workspace-qa/: QA.md
scripts/: test-git-cdc-roundtrip.sh  test-git-cdc-server-health.sh
