[package]
name = "git-cdc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = "1.9.0"
aws-sdk-s3 = "1.138.1"
blake3 = { version = "1", features = ["std"] }
clap = { version = "4.6.2", features = ["derive"] }
fastcdc = "4.0.1"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.4", features = ["rt"] }

[dev-dependencies]
axum = "0.8.9"
git-cdc-server = { path = "../server" }
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "net", "macros"] }
