[package]
name = "git-cdc-core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["std"] }
clap = { version = "4.6.2", features = ["derive"] }
fastcdc = "4.0.1"
opendal = { version = "0.57", default-features = false, features = [
    "services-azblob",
    "services-gcs",
    "services-sftp",
    "services-ftp",
    "services-gdrive",
    "services-webdav",
    "services-onedrive",
    "services-s3",
    "services-fs",
] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.4", features = ["rt"] }
zstd = "0.13"

[dev-dependencies]
axum = "0.8.9"
criterion = "0.8"
git-cdc-server = { path = "../server" }
hyper-util = "0.1.20"
s3s = "0.14.1"
s3s-fs = "0.14.1"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "net", "macros"] }

[[bench]]
name = "core"
harness = false
