[package]
name = "git-cdc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["std"] }
fastcdc = "4.0.1"
opendal = { version = "0.57", default-features = false, features = [
    "services-azblob",
    "services-azfile",
    "services-b2",
    "services-dropbox",
    "services-gcs",
    "services-sftp",
    "services-ftp",
    "services-gdrive",
    "services-swift",
    "services-webdav",
    "services-onedrive",
    "services-s3",
    "services-fs",
] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.4", features = ["rt"] }
zstd = "0.13"

[dev-dependencies]
criterion = "0.8"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "net", "macros"] }

[[bench]]
name = "core"
harness = false
