[package]
name = "git-cdc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = "1.9.0"
aws-sdk-s3 = "1.138.1"
axum = "0.8"
blake3 = "1"
clap = { version = "4", features = ["derive", "env"] }
git-cdc-core = { path = "../core" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
tempfile = "3"
